# English-Grammar-Correction

./: README.md  grammar_correction_trainer.py  main.py  preprocess.py  pyproject.toml  test.parquet  train_model.py  utils.py
config/: __init__.py  settings.yaml
preprocessed/: es.csv  test.csv  valid.csv
