[project]
name = "english-grammar-correction"
version = "0.1.0"
description = ""
authors = [
    {name = "tanatip_timtong",email = "ttimt@sertiscorp.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers (>=4.53.2,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "dynaconf (>=3.2.11,<4.0.0)",
    "optuna (>=4.4.0,<5.0.0)",
    "peft (>=0.16.0,<0.17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
